--- a/RachelBurke/TestingInNode/lib/package.json
+++ b/RachelBurke/TestingInNode/lib/package.json
@@ -10,8 +10,8 @@
     "type": "git",
     "url": "git+https://github.com/THXBurke/simple_modular_and_test_patterns.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "rachelwheels@gmail.com",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/THXBurke/simple_modular_and_test_patterns/issues"
   },
