--- a/RachelBurke/RachelBurke/lib/package.json
+++ b/RachelBurke/RachelBurke/lib/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "lib",
+  "name": "greet",
   "version": "1.0.0",
   "description": "",
   "main": "greet.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test"
   },
   "repository": {
     "type": "git",
